tests/fixtures/invalid/pow_dict_str_int.py
# Cannot call pow() with Dict[str, int], Str, Int
x = pow({"a": 1}, "hello", 1)
